--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
  
 <div class="row">
 	<div class="col-md-4 mb-2 ml-3">
-		<a href="https://www.facebook.com/profile.php?id=100013813997448" class="navbar-brand p-2"><img src="fb.png"  width="40" height="40"></a>
-		<a href="https://www.instagram.com/deep_46266/" class="navbar-brand p-2"><img src="insta.png"  width="40" height="40"></a>
-		<a href="https://twitter.com/Deepuku28317770" class="navbar-brand p-2"><img src="twit.png"  width="40" height="40"></a>
-		<a href="https://www.youtube.com/channel/UC85cWoVkr7piX45MXx5Ne9g" class="navbar-brand p-2"><img src="yt.png"  width="40" height="40"></a>
+		<a href="https://https://m.facebook.com/rspatel.rspatel.71?ref=bookmarks" class="navbar-brand p-2"><img src="fb.png"  width="40" height="40"></a>
+		<a href="https://www.instagram.com/rspatel5067/" class="navbar-brand p-2"><img src="insta.png"  width="40" height="40"></a>
+		<a href="https://twitter.com/Rspatel13490181" class="navbar-brand p-2"><img src="twit.png"  width="40" height="40"></a>
+		<a href="#" class="navbar-brand p-2"><img src="yt.png"  width="40" height="40"></a>
 	</div>
 </div>
 </body>
