--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <div class="jumbotron mt-5 " style="height: 600px;">
     <h1 style="margin-top: 200px; text-align: center;">About</h1>
     <p class="about-content-1"> Currently persuing <span>BCA</span> from
-        <span>A M College Gaya,BIHAR (2019-2022)</span>. I certainly don't know everything about
+        <span>Gaya College Gaya</span>. I certainly don't know everything about
         webDevelopment but I am passionate about learning webDevelopment.</p>
   </div>
 </div>
